<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.UsernameActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minWidth="110dp"
        android:text="@string/next"
        android:textSize="14sp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNext"
        android:textColor="#000000"
        android:textSize="14sp"
        android:hint="@string/enter_you_username"
        android:layout_marginBottom="10dp" />

    <ProgressBar
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/enterUsername"
        app:layout_constraintBottom_toBottomOf="@id/enterUsername"
        app:layout_constraintTop_toTopOf="@id/enterUsername" />

    <ImageView
        android:id="@+id/arenaIconImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/arena_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome_to_siesgst_arena"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>