<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.ProfileFragment">

    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:id="@+id/profile_progress"
        android:visibility="visible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_view"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/avatar"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/designation"
            android:text="Advanced"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_below="@id/designation"
            android:text="Vipul Singh Raghuvanshi"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginTop="10dp"
            android:text="\@vipul-08"
            android:textStyle="italic"
            android:layout_below="@id/name"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ratingsLinear"
            android:layout_marginTop="10dp"
            android:layout_below="@id/username"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="Ratings: "
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1586"
                android:id="@+id/ratings"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bioText"
            android:layout_marginTop="20dp"
            android:text="Bio:"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_below="@id/ratingsLinear"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bioContent"
            android:layout_marginTop="5dp"
            android:text="Code Blooded"
            android:layout_below="@id/bioText"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/bioContent"
            android:layout_marginTop="30dp"
            android:id="@+id/codechefView" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:src="@drawable/codechef" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/codechef_handle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/codechefView"
            android:id="@+id/codeforcesView" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:src="@drawable/codeforces" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/codeforces_handle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/codeforcesView"
            android:id="@+id/githubView" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:src="@drawable/github" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/github_handle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/githubView"
            android:id="@+id/sendMailView" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_gmail" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/send_email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>